--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="color_one">#82B1FF</color>
+    <color name="color_two">#ffeead</color>
+    <color name="color_three">#ff6f69</color>
+    <color name="color_four">#96ceb4</color>
+    <color name="color_five">#9E82FF</color>
+    <color name="color_seven">#FFB74D</color>
+    <color name="color_eight">#8BC34A</color>
+
 </resources>
