--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,6 +34,25 @@
         <item name="android:textColor">#ffeead</item>
     </style>
 
+
+    <style name="tv_heading" parent="Theme.AppCompat">
+        <item name="android:fontFamily">serif-monospace</item>
+        <item name="android:textSize">23sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="tv_content" parent="Theme.AppCompat">
+        <item name="android:fontFamily">serif-monospace</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+
     <style name="Theme.OCRInternProject.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
