--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,18 +37,18 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="left|center|right"
-            android:layout_margin="6dp"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif-condensed-medium"
-            android:gravity="left|center|right"
-            android:text="@string/project_intro"
-            android:textAlignment="center"
-            android:textColor="#323232"
-            android:textSize="13sp" />
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:layout_gravity="left|center|right"-->
+<!--            android:layout_margin="6dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:fontFamily="sans-serif-condensed-medium"-->
+<!--            android:gravity="left|center|right"-->
+<!--            android:text="@string/project_intro"-->
+<!--            android:textAlignment="center"-->
+<!--            android:textColor="#323232"-->
+<!--            android:textSize="13sp" />-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -82,7 +82,7 @@
 
 
                 <ImageView
-                    android:id="@+id/imageView_college"
+                    android:id="@+id/imageView_certificate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -91,7 +91,7 @@
 
 
                 <ImageView
-                    android:id="@+id/imageView_person"
+                    android:id="@+id/imageView_person_detail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -99,7 +99,7 @@
                     android:src="@drawable/ic_person" />
 
                 <ImageView
-                    android:id="@+id/imageView_book"
+                    android:id="@+id/imageView_project_detail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
